# RefractOptics

cpp/: CMakeLists.txt  defs.h  interpolate_main.cpp  interpolator.cpp  interpolator.h  linear.sh  main.cpp  malmconvergence.h  malmwrapper.h  solve.cpp  solve.h  stability.h  stats.cpp  stats.h  svmmodels.h  symbregmodels.cpp  symbregmodels.h  testlinear_main.cpp  threadpool.h  util.cpp  util.h
cpp/data/laser/: laser.rar  ldata.gnuplot.txt  ldata.txt  results.sh  script.sh
cpp/data/laser/001/: ldata.txt_coeff0.dat.eps  ldata.txt_coeff1.dat.eps  ldata.txt_coeff2.dat.eps
cpp/data/laser/004/: descr.txt
cpp/data/laser/006/: descr.txt
cpp/data/laser/007/: descr.txt
cpp/data/laser/008/: descr.txt
cpp/data/laser/009/: descr.txt
cpp/data/laser/comparison_malm_classical/: PlotComparison.hs  comparison.txt  comparison2.txt  comparison3.txt  comparison_1000_32.txt  comparison_1000_32_1000.txt  comparison_1000_32_10000.txt  comparison_1000_32_1000_xsigma0.5.txt  comparison_1000_32_1000_xsigma0.6.txt  comparison_1000_32_1000_xsigma0.7.txt  comparison_1000_32_1000_xsigma0.8.txt  comparison_1000_32_1000_xsigma0.9.txt  comparison_1000_32_1000_xsigma1.2.txt  comparison_1000_32_1000_xsigma1.4.txt  comparison_1000_32_1000_xsigma1.txt  comparison_1000_32_1000_xsigma2.txt  comparison_1000_32_1000_xsigma3.txt  comparison_1000_32_1000_xsigma4.txt  comparison_1000_32_1000_xsigma5.txt  comparison_1000_32_1000_xsigma6.txt  comparison_1000_32_1000_xsigma7.txt  comparison_1000_32_1000_xsigma8.txt  comparison_1000_32_1000_xsigma9.txt  comparison_100_32.txt  comparison_300_32.txt  comparison_300_32_2000.txt  comparison_500_512.txt
cpp/data/laser/convergence/: convergence_script.sh
cpp/data/polymers/: p1.txt  p1_gnuplot.txt  p2.txt  p2_gnuplot.txt  p3.txt  poly.rar  polymers.eps  script.sh
cpp/data/polymers/all powers2/: p1.txt_coeff0.dat.eps  p1.txt_coeff1.dat.eps  (+10 more)
cpp/support/: Pytha.hs  script.sh
(+148 files in other folders)
